add Users Tests